2008-06-11  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-icon-dnd.c (drag_drop_callback):
	* libnautilus-private/nautilus-view.c
	(nautilus_view_drop_proxy_received_uris):
	* libnautilus-private/nautilus-view.h:
	* src/file-manager/fm-directory-view.c
	(fm_directory_view_init_view_iface),
	(fm_directory_view_drop_proxy_received_uris):
	* src/nautilus-notebook.c (nautilus_notebook_class_init),
	(notebook_tab_drag_data_received), (find_drop_target),
	(get_drop_action), (notebook_tab_drag_motion),
	(notebook_tab_drag_leave), (notebook_tab_drag_drop),
	(nautilus_notebook_init), (build_tab_label):
	Enable drop to tab labels, which act as a proxy for the respective view.

2008-06-08  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-directory-background.c
	(initialize_background_from_settings):
	Use eel_background_set_image_uri() instead of *_sync().

2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* src/nautilus-navigation-action.c (should_open_in_new_tab),
	(activate_back_or_forward_menu_item), (proxy_button_press_event_cb),
	(proxy_button_release_event_cb), (connect_proxy), (disconnect_proxy):
	* src/nautilus-navigation-window-menus.c (should_open_in_new_tab),
	(action_back_callback), (action_forward_callback),
	(action_new_tab_callback):
	* src/nautilus-navigation-window.c
	  (path_bar_location_changed_callback),
	  (nautilus_navigation_window_go_back),
	  (nautilus_navigation_window_go_forward):
	* src/nautilus-navigation-window.h:
	* src/nautilus-window-manage-views.c (viewed_file_changed_callback),
	(nautilus_window_slot_go_home),
	(got_file_info_for_view_selection_callback), (create_content_view),
	(nautilus_navigation_window_back_or_forward):
	* src/nautilus-window-menus.c (should_open_in_new_tabs),
	(activate_bookmark_in_menu_item), (action_home_callback),
	(action_go_to_computer_callback), (action_go_to_network_callback),
	(action_go_to_templates_callback), (action_go_to_trash_callback),