@@ -1,3 +1,9 @@
+2008-06-28  Christian Neumair  <cneumair@gnome.org>
+
+	* src/file-manager/fm-directory-view.c
+	(clipboard_changed_callback):
+	Do not react to changes if inactive.
+
 2008-06-11  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-icon-dnd.c (drag_drop_callback):
